--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -81,10 +81,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Sleep for a few seconds to prevent timing issues between the deletion and creation of the release
-        run: sleep 10
         if: github.event.inputs.isMock != 'true'
+        run: sleep 10
 
       - name: Create and set tag name
+        if: github.event.inputs.isMock != 'true'
         run: |
           COMMIT_HASH=$(git rev-parse HEAD)
           TIME=$(date +%s)
@@ -106,6 +107,7 @@ jobs:
             ./release/*
 
       - name: Publish the draft release
+        if: github.event.inputs.isMock != 'true'
         run: gh release edit nightly --draft=false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
