--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -76,8 +76,12 @@ jobs:
 
       - name: Delete tag and release if not mock
         if: github.event.inputs.isMock != 'true'
-        # TODO: FIX
-        run: gh release delete nightly --cleanup-tag || echo "no previous nightly release"
+        run: |
+          PREV_NIGHTLY=$(gh release list --json name,tagName | jq -c '[.[] | select (.tagName | contains("nightly"))][0] | .tagName')
+          echo "Will delete nightly release with tag $PREV_NIGHTLY"
+          if [[ "$PREV_NIGHTLY" != "null" ]]; then
+            gh release delete nightly --cleanup-tag || echo "no previous nightly release"
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
