delete all nightly

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -77,11 +77,17 @@ jobs:
       - name: Delete tag and release if not mock
         if: github.event.inputs.isMock != 'true'
         run: |
-          PREV_NIGHTLY=$(gh release list --json name,tagName | jq -c '[.[] | select (.tagName | contains("nightly-"))][0] | .tagName' | tr -d '"')
-          echo "Will delete nightly release with tag '$PREV_NIGHTLY'"
-          if [[ "$PREV_NIGHTLY" != "null" ]]; then
-            gh release delete $PREV_NIGHTLY --cleanup-tag || echo "couldn't delete previous nightly release"
-          fi
+          while true; do
+            PREV_NIGHTLY=$(gh release list --json name,tagName | jq -c '[.[] | select (.tagName | contains("nightly-"))][0] | .tagName' | tr -d '"')
+
+            if [[ "$PREV_NIGHTLY" != "null" && "$PREV_NIGHTLY" == *"nightly-"* ]]; then # Check just in case as I do not want to delete something else!
+              echo "Will delete nightly release with tag '$PREV_NIGHTLY'"
+              gh release delete $PREV_NIGHTLY --cleanup-tag || { echo "couldn't delete previous nightly release, halting" && break }
+            else
+              echo "no nightly releases left, done"
+              break
+            fi
+          done
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
