ci: add loongarch64 to build CI job

--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -127,6 +127,13 @@ jobs:
               cross: true,
             }
 
+          # Loongarch
+          - {
+              os: "ubuntu-22.04",
+              target: "loongarch64-unknown-linux-gnu",
+              cross: true,
+            }
+
           # Windows ARM
           - {
               os: "windows-11-arm",
