--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -127,6 +127,23 @@ jobs:
               cross: true,
             }
 
+          # # Android
+          # - {
+          #     os: "ubuntu-latest",
+          #     target: "aarch64-linux-android",
+          #     cross: true,
+          #     cross-version: "git:154b4ead7e639c7597d9e4e626b9c1c1e37608c0",
+          #     no-default-features: true,
+          #   }
+
+          # Loongarch
+          - {
+              os: "ubuntu-22.04",
+              target: "loongarch64-unknown-linux-gnu",
+              cross: true,
+              cross-version: "git:154b4ead7e639c7597d9e4e626b9c1c1e37608c0",
+            }
+
           # Windows ARM
           - {
               os: "windows-11-arm",
@@ -163,6 +180,17 @@ jobs:
           sh rustup.sh --default-toolchain stable -y
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
+      - name: Set features
+        shell: bash
+        run: |
+          if [[ "${{ matrix.info.no-default-features }}" == "true" ]]; then
+            BUILD_FEATURES="--no-default-features"
+          else
+            BUILD_FEATURES="--features deploy"
+          fi
+          echo "Will build with the following features: $BUILD_FEATURES"
+          echo "BUILD_FEATURES=$BUILD_FEATURES" >> $GITHUB_ENV
+
       - name: Build
         uses: ClementTsang/cargo-action@2438cc5f3ba4e971289fffca2a00dedea6911f14 # v0.0.7
         env:
@@ -170,9 +198,9 @@ jobs:
           BTM_BUILD_RELEASE_CALLER: ${{ inputs.caller }}
         with:
           command: build
-          args: --release --locked --target=${{ matrix.info.target }} --features deploy
+          args: --release --locked --target=${{ matrix.info.target }} ${{ env.BUILD_FEATURES }}
           use-cross: ${{ matrix.info.cross }}
-          cross-version: 0.2.5
+          cross-version: ${{ matrix.info.cross-version || '0.2.5' }}
 
       - name: Move automatically generated completion/manpage
         shell: bash
