--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -222,7 +222,7 @@ jobs:
               no-clippy: true,
             }
 
-          # Windows ARM
+          # Windows ARM, may promote to official.
           - {
               os: "windows-11-arm",
               target: "aarch64-pc-windows-msvc",
