--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -75,7 +75,9 @@ jobs:
           merge-multiple: true
 
       - name: Execute choco packaging script
-        run: ./scripts/ci/generate_choco.sh
+        run: |
+          python "./scripts/windows/choco/choco_packager.py" "./release/bottom_x86_64-pc-windows-msvc.zip" ${{ env.RELEASE_VERSION }} "./scripts/windows/choco/bottom.nuspec.template" "./scripts/windows/choco/chocolateyinstall.ps1.template" "bottom.nuspec" "tools/chocolateyinstall.ps1" "tools/"
+          zip -r choco.zip "bottom.nuspec" "tools"
 
       - name: Move release file into release directory
         shell: bash
