--- a/.github/workflows/post_release.yml
+++ b/.github/workflows/post_release.yml
@@ -69,8 +69,15 @@ jobs:
       - name: Configure git user and email
         run: ./scripts/ci/configure_git.sh
 
+      # TODO: Test with scripts/ci/release_stable_docs.sh
       - name: Build and deploy docs with mike as the latest stable branch
-        run: ./scripts/ci/release_stable_docs.sh
+        run: |
+          cd docs
+          OLD_STABLE_VERSION=$(mike list stable | grep -Po '([0-9]+.[0-9]+.[0-9]+)' | head -n1)
+          echo ${OLD_STABLE_VERSION}
+          mike retitle --push stable ${OLD_STABLE_VERSION}
+          mike deploy --push --update-aliases ${RELEASE_VERSION} stable
+          mike retitle --push ${RELEASE_VERSION} "${RELEASE_VERSION} (stable)"
 
   chocolatey:
     needs: [initialize]
@@ -84,6 +91,9 @@ jobs:
       - name: Validate release version
         run: |
           echo "Release version: ${{ env.RELEASE_VERSION }}"
-
       - name: Trigger choco
-        run: ./scripts/ci/release_choco.sh
+        run: |
+          curl -X POST https://api.github.com/repos/ClementTsang/choco-bottom/dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.BOTTOM_PACKAGE_DEPLOYMENT }} \
+          --data '{ "event_type": "update", "client_payload": { "version": "'"$RELEASE_VERSION"'" } }'
