other: update changelog and deployment release template

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -139,5 +139,11 @@ jobs:
             ## Other
 
             ## Internal Changes
+
+            ## New Contributores
+
+            ---
+
+            **Full Changelog:**
           files: |
             ./release/*
