--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -729,3 +729,48 @@ jobs:
           retention-days: 3
           name: release-build-rpm-${{ matrix.info.target }}
           path: release
+
+  test-installing:
+    name: "Test Installing"
+    runs-on: ${{ matrix.info.os }}
+    container: ${{ matrix.info.container }}
+    timeout-minutes: 12
+    strategy:
+      fail-fast: false
+      matrix:
+        info:
+          - { os: "ubuntu-22.04", target: "x86_64-unknown-linux-gnu" }
+          - { os: "macos-15", target: "aarch64-apple-darwin" }
+          - { os: "windows-2022", target: "x86_64-pc-windows-msvc" }
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        with:
+          fetch-depth: 1
+
+      - name: Read Rust version
+        shell: bash
+        run: |
+          VER=$(cat .github/ci/rust_version.txt)
+          echo "RUST_VERSION=$VER" >> $GITHUB_ENV
+          echo "$VER"
+
+      - name: Set up Rust toolchain
+        uses: dtolnay/rust-toolchain@e97e2d8cc328f1b50210efc529dca0028893a2d9
+        with:
+          toolchain: ${{ matrix.info.rust || env.RUST_VERSION }}
+          target: ${{ matrix.info.target }}
+
+      - name: Install (locked)
+        shell: bash
+        run: |
+          cargo install --path . --locked
+          btm -V
+          cargo uninstall bottom
+
+      - name: Install (not locked)
+        shell: bash
+        run: |
+          cargo install --path .
+          btm -V
+          cargo uninstall bottom
