--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -140,7 +140,7 @@ jobs:
 
             ## Internal Changes
 
-            ## New Contributores
+            ## New Contributors
 
             ---
 
