--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,4 +3,4 @@ mkdocs-material == 9.7.1
 mdx_truly_sane_lists == 1.3
 mike == 2.1.3
 mkdocs-git-revision-date-localized-plugin == 1.4.5
-
+mkdocs-redirects == 1.2.2
