--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -125,3 +125,9 @@ jobs:
         run: gh release edit "$TAG_NAME" --draft=false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  docs:
+    needs: [initialize-job, upload-release]
+    if: ${{ needs.initialize-job.outputs.should_skip != 'true' && github.event.inputs.isMock != 'true' }}
+    uses: ./.github/workflows/docs.yml
+    secrets: inherit
