--- a/.github/workflows/post_release.yml
+++ b/.github/workflows/post_release.yml
@@ -66,13 +66,8 @@ jobs:
       - name: Install Python dependencies
         run: pip install -r docs/requirements.txt
 
-      # TODO: Test this with the script instead
       - name: Configure git user and email
-        run: |
-          git config --global user.name ${GIT_USER}
-          git config --global user.email ${GIT_EMAIL}
-          echo Name: $(git config --get user.name)
-          echo Email: $(git config --get user.email)
+        run: ./scripts/ci/configure_git.sh
 
       # TODO: Test this with the script instead
       - name: Build and deploy docs with mike as the latest stable branch
