--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,7 +9,7 @@ docs_dir: "content/"
 repo_name: ClementTsang/bottom
 repo_url: https://github.com/ClementTsang/bottom
 edit_uri: "edit/main/docs/content/"
-copyright: Copyright &copy; 2019 - 2024 Clement Tsang
+copyright: Copyright &copy; 2019 - 2026 Clement Tsang
 
 # Theming
 theme:
@@ -137,12 +137,16 @@ plugins:
   - git-revision-date-localized:
       type: date
   - privacy
+  - redirects:
+      redirect_maps:
+        nightly-release.md: "https://github.com/ClementTsang/bottom/releases"
 
 extra:
   # Versioning
   version:
     provider: mike
     default: stable
+    alias: true
 
 # Navigation
 nav:
@@ -185,3 +189,6 @@ nav:
           - "Build Process": contribution/development/build_process.md
           - "Deploy Process": contribution/development/deploy_process.md
   - "Troubleshooting": troubleshooting.md
+
+hooks:
+  - ./hooks/nightly_redirect.py
