--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,7 @@ starship-battery = { version = "0.10.2", optional = true }
 sysinfo = "=0.37.2"
 timeless = "0.0.14-alpha"
 toml_edit = { version = "0.23.6", features = ["serde"] }
-tui = { version = "=0.30.0-beta.1", package = "ratatui", features = ["unstable-rendered-line-info", "layout-cache"] }
+tui = { version = "0.30.0", package = "ratatui", features = ["unstable-rendered-line-info", "layout-cache"] }
 unicode-ellipsis = "0.3.0"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.0"
