--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ indoc = "2.0.6"
 itertools = "0.14.0"
 nohash = "0.2.0"
 nvml-wrapper = { version = "0.11.0", optional = true, features = ["legacy-functions"] }
+ratatui-core = "0.1.0"
 regex = "1.11.2"
 rustc-hash = "2.1.1"
 serde = { version = "1.0.226", features = ["derive"] }
