refactor: use ratatui 0.30.0 (#1930)
* refactor: support ratatui 0.30.0-beta.1

* 0.30.0!

* some refactoring

* ugh I broke something

* hm I think that fixes it

* fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ indoc = "2.0.6"
 itertools = "0.14.0"
 nohash = "0.2.0"
 nvml-wrapper = { version = "0.11.0", optional = true, features = ["legacy-functions"] }
+ratatui-core = "0.1.0"
 regex = "1.11.2"
 rustc-hash = "2.1.1"
 serde = { version = "1.0.226", features = ["derive"] }
@@ -95,7 +96,7 @@ starship-battery = { version = "0.10.2", optional = true }
 sysinfo = "=0.37.2"
 timeless = "0.0.14-alpha"
 toml_edit = { version = "0.23.6", features = ["serde"] }
-tui = { version = "=0.30.0-beta.0", package = "ratatui", features = ["unstable-rendered-line-info", "layout-cache"] }
+tui = { version = "0.30.0", package = "ratatui", features = ["unstable-rendered-line-info", "layout-cache"] }
 unicode-ellipsis = "0.3.0"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.0"
