--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,11 @@ starship-battery = { version = "0.10.3", optional = true }
 sysinfo = "=0.37.2"
 timeless = "0.0.14-alpha"
 toml_edit = { version = "0.24.0", features = ["serde"] }
-tui = { version = "0.30.0", package = "ratatui", features = ["unstable-rendered-line-info", "layout-cache", "crossterm"] }
+tui = { version = "0.30.0", package = "ratatui", features = [
+    "unstable-rendered-line-info",
+    "layout-cache",
+    "crossterm",
+] }
 unicode-ellipsis = "0.3.0"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.2"
@@ -249,6 +253,7 @@ rust_2018_idioms = "deny"
 
 [lints.rustdoc]
 broken_intra_doc_links = "deny"
+private_intra_doc_links = "deny"
 missing_crate_level_docs = "deny"
 
 [lints.clippy]
