--- a/.github/workflows/post_release.yml
+++ b/.github/workflows/post_release.yml
@@ -77,6 +77,7 @@ jobs:
           OLD_STABLE_VERSION=$(mike list stable | grep -Po '(\d{1,3}\.\d{1,3}\.\d{1,3})' | head -n1)
           echo ${OLD_STABLE_VERSION}
           mike retitle --push stable ${OLD_STABLE_VERSION}
+          mike deploy --push --update-aliases ${RELEASE_VERSION} stable
 
   chocolatey:
     needs: [initialize]
