fix gh pages workflow since gh-pages is not a valid branch
Looks like I can't trigger things committing things to that branch...?

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -49,3 +49,8 @@ jobs:
         run: |
           cd docs
           mike deploy nightly --push
+
+  publish-gh-pages:
+    needs: [build-documentation]
+    uses: ./.github/workflows/publish_github_pages.yml
+    secrets: inherit
