ci: use test signing slug for nightly builds
Since I don't want to approve it for every single build each day

--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -214,7 +214,11 @@ jobs:
         shell: bash
         run: |
           mkdir -p signed
-          echo "slug=release-signing" >> $GITHUB_OUTPUT
+          if [[ ${{ inputs.caller }} == "nightly" ]]; then
+            echo "slug=test-signing" >> $GITHUB_OUTPUT
+          else
+            echo "slug=release-signing" >> $GITHUB_OUTPUT
+          fi
 
       - name: Upload unsigned Windows artifact
         id: upload-unsigned-artifact
